# OstGraph

./: CMakeLists.txt  Graph.cpp  Graph.h  Kruskal.cpp  Kruskal.h  OstBase.h  Prim.cpp  Prim.h  main.cpp  main.py  test.cpp
data/: kruskal.txt  prim.txt  test.txt  test_1.txt  test_step100_m_1.txt  test_step100_m_2.txt  test_step100_m_3.txt  test_step100_m_4.txt  test_step1_m_1.txt  test_step1_m_2.txt
